echo1/networkpolicy2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-db-traffic
  namespace: echo
spec:
  podSelector:
    matchLabels:
      app: database
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: echo-app # Tylko pod z tą etykietą przejdzie przez zaporę
    ports:
    - protocol: TCP
      port: 5432
